--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
-    "hono": "^4.7.7"
+    "hono": "^4.7.7",
+    "prisma": "^6.6.0"
   },
   "devDependencies": {
     "wrangler": "^4.4.0"
