--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,14 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
+    "@100xdevs/medium-common": "^1.0.0",
+    "@prisma/extension-accelerate": "^0.6.3",
     "hono": "^4.7.7",
     "prisma": "^6.6.0"
   },
   "devDependencies": {
-    "wrangler": "^4.4.0"
+    "wrangler": "^4.4.0",
+    "@cloudflare/workers-types": "^4.20240208.0"
   }
 }
